Add subscription listener and event handlers